--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1198,18 +1198,25 @@ body {
 	overflow-y: auto;
 }
 
-.no-transforms .slides {
+.no-transforms .reveal .slides {
+	position: relative;
 	width: 80%;
+	height: auto !important;
 	top: 0;
 	left: 50%;
 	margin: 0;
 	text-align: center;
 }
 
-.no-transforms .slides section {
-	display: block!important;
-	opacity: 1!important;
-	position: relative!important;
+.no-transforms .reveal .controls,
+.no-transforms .reveal .progress {
+	display: none !important;
+}
+
+.no-transforms .reveal .slides section {
+	display: block !important;
+	opacity: 1 !important;
+	position: relative !important;
 	height: auto;
 	min-height: auto;
 	top: 0;
@@ -1219,10 +1226,11 @@ body {
 	-webkit-transform: none;
 	   -moz-transform: none;
 	    -ms-transform: none;
+	     -o-transform: none;
 	        transform: none;
 }
 
-.no-transforms .slides section section {
+.no-transforms .reveal .slides section section {
 	left: 0;
 }
 
